<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40dp"
            android:text="@string/text_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgProduct1"
                    android:layout_width="30dp"
                    android:layout_height="160dp"
                    android:layout_weight="5"
                    app:srcCompat="@drawable/meat" />

                <TextView
                    android:id="@+id/textProduct1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/text_product1" />

                <Button
                    android:id="@+id/btnProduct1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_info_product1" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgProduct2"
                    android:layout_width="120dp"
                    android:layout_height="160dp"
                    android:layout_weight="5"
                    app:srcCompat="@drawable/vegetables" />

                <TextView
                    android:id="@+id/textProduct2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/text_product2" />

                <Button
                    android:id="@+id/btnProduct2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_info_product2" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgProduct3"
                    android:layout_width="30dp"
                    android:layout_height="160dp"
                    android:layout_weight="5"
                    app:srcCompat="@drawable/milk" />

                <TextView
                    android:id="@+id/textProduct3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/text_product3" />

                <Button
                    android:id="@+id/btnProduct3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_info_product3" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgProduct4"
                    android:layout_width="150dp"
                    android:layout_height="160dp"
                    android:layout_weight="5"
                    app:srcCompat="@drawable/chips" />

                <TextView
                    android:id="@+id/textProduct4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20dp"
                    android:text="@string/text_product4" />

                <Button
                    android:id="@+id/btnProduct4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_info_product4" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>